--- a/ItcubeServer/templates/taskList.html
+++ b/ItcubeServer/templates/taskList.html
@@ -17,7 +17,7 @@
                     <div class="fw-bold">#{{ id }} <i class="h5">{{ text }}</i></div>
                     Date create: {{ date }}
                     {% if complete %}
-                        <i class="text-success bg-light p-1 rounded ms-3">Date implement: {{ date_im }}</i>
+                        <i class="text-success bg-dark p-1 rounded ms-3">Date implement: {{ date_im }}</i>
                     {% endif %}
                 </div>
                 {% if user.is_authenticated %}
