--- a/ItcubeServer/templates/sign_up.html
+++ b/ItcubeServer/templates/sign_up.html
@@ -13,13 +13,50 @@
 </head>
 <body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
 <form method="post" class="border w-25 p-3 rounded">
-    <h3 class="text-center mb-2">Sign Up</h3>
+
+    <h3 class="text-center mb-2 text-primary">Sign Up</h3>
     {% csrf_token %}
     {{ form.as_p }}
+     <div class="d-flex justify-content-around border rounded p-1 mb-3">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" value="m" name="gender" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                        Man(sigma)
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" value="f" name="gender" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        Woman
+                    </label>
+                </div>
+            </div>
+    <div class="d-flex border rounded p-1 mb-3">
+                <div class="form-check ms-3">
+                    <input class="form-check-input" type="checkbox" id="flexCheckDefault" name="confirm">
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Do you agree to the privacy terms? (just a joke)
+                    </label>
+
+                </div>
+            </div>
     <div class="w-100 d-flex">
-        <button type="submit" class="btn btn-primary w-50 me-1">Sign Up</button>
-        <a href="/" class="btn btn-danger w-50 ms-1">Back</a>
+        <button type="submit" class="btn btn-outline-primary w-50 me-1">Sign Up</button>
+        <a href="/" class="btn btn-outline-danger w-50 ms-1">Back</a>
     </div>
+
 </form>
 </body>
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
 </html>
