--- a/ItcubeServer/templates/registration/login.html
+++ b/ItcubeServer/templates/registration/login.html
@@ -12,14 +12,28 @@
     </style>
 </head>
 <body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-<form method="post" class="border w-25 p-3 rounded">
-    <h3 class="text-center mb-2">Sign In</h3>
+<form method="post" class="border p-3 rounded">
+    <div class="d-grid gap-6col-8 mx-auto">
+  <button type="button" class="btn btn-lg btn-outline-primary mb-8" disabled>Entrance </button>
+</div>
     {% csrf_token %}
     {{ form.as_p }}
     <div class="w-100 d-flex">
-        <button type="submit" class="btn btn-primary w-50 me-1">Sign In</button>
-        <a href="/" class="btn btn-danger w-50 ms-1">Back</a>
+        <button type="submit" class="btn btn-outline-success w-50 me-1">Sign In</button>
+        <a href="/" class="btn btn-outline-danger w-50 ms-1">Back</a>
     </div>
 </form>
 </body>
+</html>
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
