--- a/ItcubeServer/templates/index.html
+++ b/ItcubeServer/templates/index.html
@@ -23,24 +23,24 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-dark m-3 border rounded bg-dark text-white">
+<nav class="navbar navbar-light m-3 border rounded bg-secondary text-white">
     <div class="container-fluid justify-content-center flex-row">
-        <a class="navbar-brand text-white" href="#">ITcube</a>
-        <div class="d-flex align-items-center position-absolute end-0">
+        <a class="navbar-brand text-dark" href="#">Recipes</a>
+        <div class="d-flex text-danger align-items-center position-absolute end-0">
             {% if user.is_authenticated %}
-                <span class="me-3">{{ user.username }}</span>
+                <button class="btn btn-dark me-3  " disabled>{{ user.username }}</button>
                 <form action="/accounts/logout/" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-outline-danger me-3">Log out</button>
+                    <button type="submit" class="btn btn-danger me-3">Log out</button>
                 </form>
             {% else %}
-                <a href="/accounts/login/" class="btn btn-info me-1">Sign In</a>
-                <a href="/accounts/reg/" class="btn btn-custom me-3">Sign Up</a>
+                <a href="/accounts/login/" class="btn btn-primary me-1">Sign In</a>
+                <a href="/accounts/reg/" class="btn btn-dark btn-custom me-3">Sign Up</a>
             {% endif %}
         </div>
     </div>
 </nav>
-<div class="container-fluid">
+<div class="">
     {% block content %}
     {% endblock content %}
 </div>
@@ -48,4 +48,16 @@
     <a href="/taskForm/" type="button" class="btn btn-lg btn-outline-success position-absolute end-0 bottom-1 m-5 cringe">+</a>
 {% endif %}
 </body>
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+
 </html>
