added a enter input( почти работает )

--- a/ItcubeServer/templates/taskForm.html
+++ b/ItcubeServer/templates/taskForm.html
@@ -18,7 +18,7 @@
         <form action="/taskCreate" class="pt-1 w-100">
             <div class="input-group mb-3">
                 <span class="input-group-text text-primary w-25" id="basic-addon1">Recept</span>
-                <input type="text" class="form-control" name="text" placeholder="write the recept" maxlength="2550">
+                <textarea type="text" class="form-control" name="text" id="basic-addon2" placeholder="write the recept" rows="3"></textarea>
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text text-primary w-25" id="basic-addon">Date</span>
@@ -30,7 +30,8 @@
             </div>
         </form>
     </div>
-</div><html lang="en" data-bs-theme="dark">
+</div>
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
