--- a/ItcubeServer/templates/taskList.html
+++ b/ItcubeServer/templates/taskList.html
@@ -1,11 +1,15 @@
 {% extends "index.html" %}
 
 {% block content %}
-
-    <ol class="list-group p-1 list-group-numbered">
+    <style>
+        .bg-custom {
+            background-color: #7ae1c3 !important;
+        }
+    </style>
+    <ol class="list-group p-3 list-group-numbered">
         {% for id, text, date, author, complete, implementor, date_im in tasks %}
-            <li class="list-group-item d-flex justify-content-between align-items-start
-                      {% if complete %}bg-success text-white {% endif %}">
+            <li class="list-group-item d-flex justify-content-between align-items-start mb-4
+                      {% if complete %} bg-custom text-white {% endif %}">
                 <div class="m-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
                          class="bi bi-cup-hot" viewBox="0 0 16 16">
@@ -14,12 +18,13 @@
                         <path d="m4.4.8-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 3.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 3.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 3 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 4.4.8m3 0-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 6.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 6.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 6 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 7.4.8m3 0-.003.004-.014.019a4 4 0 0 0-.204.31 2 2 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.6.6 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3 3 0 0 1-.202.388 5 5 0 0 1-.252.382l-.019.025-.005.008-.002.002A.5.5 0 0 1 9.6 4.2l.003-.004.014-.019a4 4 0 0 0 .204-.31 2 2 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.6.6 0 0 0-.09-.252A4 4 0 0 0 9.6 2.8l-.01-.012a5 5 0 0 1-.37-.543A1.53 1.53 0 0 1 9 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a6 6 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 10.4.8"/>
                     </svg>
                 </div>
-                <div class="ms-2 me-auto">
-                    <div class="fw ">#{{ id }} <i class="h5">{{ text }}</i></div>
-                    Date create: {{ date }}
-                    {% if complete %}
-                        <i class="text-success bg-dark p-1 rounded ms-3">Date implement: {{ date_im }}</i>
-                    {% endif %}
+                <div class="ms-2 me-auto w-50">
+<!--                    <div class="fw ">#{{ id }} <i class="h5">{{ text }}</i></div>-->
+<!--                    Date create: {{ date }}-->
+<!--                    {% if complete %}-->
+<!--                        <i class="text-success bg-dark p-1 rounded ms-3">Date implement: {{ date_im }}</i>-->
+<!--                    {% endif %}-->
+                    <textarea class="form-control w-100" rows="10" disabled>{{text}}</textarea>
                 </div>
                 {% if user.is_authenticated %}
                     {% if user.username == author.username %}
@@ -28,11 +33,11 @@
                         </form>
                     {% endif %}
                 {% endif %}
-                <span class="badge text-dark bg-white p-2">
+                <span class="badge text-dark bg-white fs-6 p-3">
                     {{ author }}
                 </span>
                 {% if complete %}
-                    <span class="badge text-white bg-dark     p-2 ms-1">
+                    <span class="badge text-white bg-dark fs-6 p-3 ms-1">
                     {{ implementor }}
                 </span>
                 {% endif %}
