added funnt cats on main

--- a/ItcubeServer/templates/index.html
+++ b/ItcubeServer/templates/index.html
@@ -40,6 +40,10 @@
         </div>
     </div>
 </nav>
+<img src="https://art.pixilart.com/084279f7082756d.png" width="100" height="100" alt="There should have been a funny cat here.">
+<img src="https://w7.pngwing.com/pngs/453/918/png-transparent-pixel-cat.png" width="60" height="60" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/4e66321934c1f6e.png" width="120" height="120" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/5ba2c157da55cec.png" width="80" height="80" alt="There should have been a funny cat here.">
 <div class="">
     {% block content %}
     {% endblock content %}
