--- a/ItcubeServer/templates/taskForm.html
+++ b/ItcubeServer/templates/taskForm.html
@@ -22,7 +22,7 @@
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text text-primary w-25" id="basic-addon">Date</span>
-                <input type="date" class="form-control" name="date" placeholder="" minlength="8">
+                <input type="date" class="form-control" name="date" placeholder="dd/mm/yyyy" minlength="8">
             </div>
             <div class="input-group w-100">
                 <button type="submit" class="btn btn-outline-success w-50 text-submit">Create</button>
