--- a/ItcubeServer/templates/index.html
+++ b/ItcubeServer/templates/index.html
@@ -36,14 +36,26 @@
             {% else %}
                 <a href="/accounts/login/" class="btn btn-primary me-1">Sign In</a>
                 <a href="/accounts/reg/" class="btn btn-dark btn-custom me-3">Sign Up</a>
+                <a href="/accounts/com/" class="btn btn-dark btn-custom me-3">Write a comment</a>
             {% endif %}
         </div>
     </div>
 </nav>
-<img src="https://art.pixilart.com/084279f7082756d.png" width="100" height="100" alt="There should have been a funny cat here.">
-<img src="https://w7.pngwing.com/pngs/453/918/png-transparent-pixel-cat.png" width="60" height="60" alt="There should have been a funny cat here.">
-<img src="https://art.pixilart.com/4e66321934c1f6e.png" width="120" height="120" alt="There should have been a funny cat here.">
-<img src="https://art.pixilart.com/5ba2c157da55cec.png" width="80" height="80" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/084279f7082756d.png" width="130" height="130" alt="There should have been a funny cat here.">
+<img src="https://celes.club/uploads/posts/2023-12/1702637662_celes-club-p-piksel-art-kotik-vkontakte-1.png" width="80" height="80" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/4e66321934c1f6e.png" width="140" height="140" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/5ba2c157da55cec.png" width="100" height="130" alt="There should have been a funny cat here.">
+<img src="https://cdn160.picsart.com/upscale-246751548010212.png" width="60" height="60" alt="There should have been a funny cat here.">
+<img src="https://www.nicepng.com/png/full/806-8066296_dancing-anime-cat-gif.png" width="60" height="100" alt="There should have been a funny cat here.">
+
+<img src="https://cdn141.picsart.com/276476330012211.png" width="70" height="100" alt="There should have been a funny cat here.">
+<img src="https://avatanplus.com/files/resources/original/5921eea0875d315c2c8c232a.png" width="120" height="80" alt="There should have been a funny cat here.">
+<img src="https://clipartcraft.com/images/cat-transparent-aesthetic-1.png" width="90" height="100" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/36dfdd4326da.png" width="130" height="100" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/d545908ee143c84.png" width="130" height="110" alt="There should have been a funny cat here.">
+<img src="https://static.wikia.nocookie.net/omori/images/4/4d/MEWO.png/revision/latest/thumbnail/width/360/height/360?cb=20220208110120" width="130" height="110" alt="There should have been a funny cat here.">
+<img src="https://art.pixilart.com/7710212a7907722.png" width="180" height="140" alt="There should have been a funny cat here.">
+
 <div class="">
     {% block content %}
     {% endblock content %}
